# layout-python

./: README.md  pyproject.toml  run_tests.bat  run_tests.ps1
.github/workflows/: ci.yml
src/: __init__.py  client.py  models.py
tests/: __init__.py  conftest.py  test_client.py
